--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -995,6 +995,579 @@ You should see the following webpage(index.html) when you access above URL.
 ![](./images/28.WildflySwarm.png)
 
 
+### Create Insult Rest Service Project Bundle with Fabric8 Launcher
+
+* Start the Launcher, if you haven't already done so previously.
+* Click on ‘Launch Your Project ‘
+* Launcher will prompt you to login. You can type in your `developers.redhat.com` credentials to login.
+* Select Deployment type  `I will build and run locally`
+![](./images/1.WildFlySwarm.jpeg)
+* Select mission `Rest API Level 0` can click `Next` to continue. Mission Control, as the name suggests, coordinates actions among dependent services. Its responsibility is to take the following inputs:
+	* 	A GitHub Project
+	* 	A GitHub project	
+	* 	A GitHub user (via OAuth token)	
+	* 	An OpenShift instance's API URL	
+	* 	An OpenShift user (via OAuth token)	
+
+	And performs the following actions:	
+	
+	* 	Fork the GitHub project into the GitHub user's namespace	
+	* Create an OpenShift project	
+	* Create a Jenkins Pipeline BuildConfig	
+	* Associate the OpenShift project with the newly-forked GitHub repo	
+	* Create a GitHub webhook on the newly-forked GitHub project to register push events to the OpenShift project	
+
+* On the next screen select ‘Wildfly Swarm’ as the Runtime and hit ‘ Next’
+![](./images/3.WildFlySwarm.jpeg)	
+
+* On the next screen add the following values for the parameters
+
+	* Runtime Version: 2018.5.0
+	* GroupId - io.openshift.booster
+	* ArtifactId - wildflyswarm-insult
+	* Version - 1.0.0-SNAPSHOT
+
+
+
+![](./images/29.WildflySwarm.png)	
+
+
+
+
+* Review the values in Review Screen
+
+![](./images/30.WildflySwarm.png)	
+
+ * hit 'Download as Zip file', Download should begin on your system
+ * Unzip the project
+
+
+* You should see the next step as shown below
+![](./images/31.WildFlySwarm.jpeg)	
+
+### Import Project to JBoss Developer Studio
+
+*  Run the following command to unzip the downloaded project bundle, or you can just double click
+
+```
+$ unzip wildflyswarm-insult.zip
+```
+Note the location of your unzipped file.
+
+* Open JBoss Developer Studio (Redsphere Icon) 
+* Choose the following menu options to import the project
+`File` ->`Import`-> `Maven` ->`Existing Maven Projects` , `Browse` to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the `Downloads` folder!!)
+
+* Add following dependency in pom.xml
+```
+<dependency>
+<groupId>org.wildfly.swarm</groupId>
+<artifactId>cdi</artifactId>
+</dependency>
+```
+
+
+* Create Insult Model Class (File->New->Class)
+
+ Package: io.openshift.booster.insult.model
+ Class Name: Insult
+ 
+![](./images/32.WildflySwarm.png)
+
+* Copy below details of the class
+
+```
+
+package io.openshift.booster.insult.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnore;
+
+public class Insult {
+    private String noun;
+
+    private String adjective;
+
+    @JsonIgnore
+    private String adj2;
+
+    @JsonIgnore
+    private String name;
+
+    public String getNoun() {
+        return noun;
+    }
+
+    public Insult noun(String noun) {
+        this.noun = noun;
+        return this;
+    }
+
+    public String getAdjective() {
+        return adjective;
+    }
+
+    public Insult adj1(String adj1) {
+        this.adjective = adj1;
+        return this;
+    }
+
+    public String getAdj2() {
+        return adj2;
+    }
+
+    public Insult adj2(String adj2) {
+        this.adj2 = adj2;
+        return this;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public Insult name(String name) {
+        this.name = name;
+        return this;
+    }
+}
+
+```
+
+* Create Name Class
+
+
+	Package: io.openshift.booster.insult.model
+    	Name: Name
+	
+
+
+![](./images/33.WildflySwarm.png)
+
+* Copy the following code into Name class
+
+```
+package io.openshift.booster.insult.model;
+
+public class Name {
+    private String name;
+
+    public String getName() {
+        return name;
+    }
+
+    public Name name(String name) {
+        this.name = name;
+        return this;
+    }
+}
+```
+
+
+* Create Noun Class
+
+
+	Package: io.openshift.booster.noun.model
+    	Name: Noun
+
+![](./images/34.WildflySwarm.png)
+
+
+* Copy the following code into Noun class
+
+```
+package io.openshift.booster.noun.model;
+	
+	public class Noun {
+
+	    private String noun;
+
+	    public Noun() {
+	    }
+
+	    public Noun(String noun) {
+	        this.noun = noun;
+	    }
+
+	    public String getNoun() {
+	        return noun;
+	    }
+
+	    public Noun noun(String noun) {
+	        this.noun = noun;
+	        return this;
+	    }
+	}
+
+```
+
+* Create NounService Interface
+
+
+	Package: io.openshift.booster.noun.service
+    	Name: NounService
+
+![](./images/35.WildflySwarm.png)
+
+
+* Copy the following code into NounService interface
+
+```
+package io.openshift.booster.noun.service;
+
+import javax.ws.rs.GET;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+
+import io.openshift.booster.noun.model.Noun;
+
+
+	
+	
+	
+
+	/**
+	 * @author Ken Finnigan
+	 */
+	@Path("/")
+	public interface NounService {
+	    @GET
+	    @Produces(MediaType.APPLICATION_JSON)
+	    @Path("/noun")
+	    Noun getNoun();
+	
+
+}
+
+```
+
+* Create Adjective class
+
+
+	Package: io.openshift.booster.adjective.model
+    	Name: Adjective
+
+![](./images/37.WildflySwarm.png)
+
+
+* Copy the following code into Adjective class
+
+
+
+```
+package io.openshift.booster.adjective.model;
+
+/**
+ * @author Ken Finnigan
+ */
+public class Adjective {
+
+    private String adjective;
+
+    public Adjective() {
+    }
+
+    public Adjective(String adjective) {
+        this.adjective = adjective;
+    }
+
+    public String getAdjective() {
+        return adjective;
+    }
+
+    public Adjective adjective(String adjective) {
+        this.adjective = adjective;
+        return this;
+    }
+}
+
+
+```
+
+
+
+* Create AdjectiveService Interface
+
+
+	Package: io.openshift.booster.adjective.service
+    	Name: AdjectiveService
+
+![](./images/36.WildflySwarm.png)
+
+
+* Copy the following code into AdjectiveService interface
+
+```
+
+package io.openshift.booster.adjective.service;
+
+import javax.ws.rs.GET;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+
+import io.openshift.booster.adjective.model.Adjective;
+
+/**
+ * @author Ken Finnigan
+ */
+@Path("/")
+public interface AdjectiveService {
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/adjective")
+    Adjective getAdjective();
+}
+```
+
+* Create InsultService class
+
+
+	Package: io.openshift.booster.insult.service
+    	Name: InsultService
+
+![](./images/38.WildflySwarm.png)
+
+
+* Copy the following code into InsultService 
+
+
+
+```
+package io.openshift.booster.insult.service;
+import javax.enterprise.context.ApplicationScoped;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+
+import org.jboss.resteasy.client.jaxrs.ResteasyClient;
+import org.jboss.resteasy.client.jaxrs.ResteasyClientBuilder;
+import org.jboss.resteasy.client.jaxrs.ResteasyWebTarget;
+
+import io.openshift.booster.adjective.service.AdjectiveService;
+import io.openshift.booster.insult.model.Insult;
+import io.openshift.booster.insult.model.Name;
+import io.openshift.booster.noun.service.NounService;
+
+@Path("/")
+@ApplicationScoped
+public class InsultService {
+	
+
+    @GET
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/insult")
+    public Insult getInsult() throws Exception {
+    	
+    	 System.out.println("cakked-");
+        return insultByName(null);
+    }
+
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("/nameinsult")
+    public Insult insultByName(Name name) throws Exception {
+        
+        ResteasyClient client = new ResteasyClientBuilder().build();
+        ResteasyWebTarget rtarget = client.target("http://wildflyswarm-noun:8080/api");
+        NounService nounService = rtarget.proxy(NounService.class); 
+       
+//       URI uri= new URI("http", null, serviceEntry.getAddress(), serviceEntry.getPort(), null, null, null);
+        
+//        String n = new NounCommand("http://wildflyswarm-noun:8080/api").execute().getNoun();
+       
+        ResteasyClient adjClient = new ResteasyClientBuilder().build();
+        ResteasyWebTarget adjTarget = adjClient.target("http://wildflyswarm-adj:8080/api");
+        AdjectiveService adjService = adjTarget.proxy(AdjectiveService.class);
+
+        return new Insult()
+                .noun(nounService.getNoun().getNoun())
+                .adj1(adjService.getAdjective().getAdjective())
+                .adj2(adjService.getAdjective().getAdjective())
+                .name(name != null ? name.getName() : null);
+    }
+
+   
+}
+
+```
+* Open src/main/webapp/index.html ( home page for our insult service to show result response from Insult Service)
+ Copy below index.html contents
+
+```
+
+<html lang="en">
+<!--
+  ~
+  ~  Copyright Red Hat, Inc, and individual contributors.
+  ~
+  ~  Licensed under the Apache License, Version 2.0 (the "License");
+  ~  you may not use this file except in compliance with the License.
+  ~  You may obtain a copy of the License at
+  ~
+  ~  http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~  Unless required by applicable law or agreed to in writing, software
+  ~  distributed under the License is distributed on an "AS IS" BASIS,
+  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~  See the License for the specific language governing permissions and
+  ~  limitations under the License.
+  ~
+  -->
+
+<head>
+  <meta charset="utf-8">
+  <title>CloudNative Workshop - WildFly Swarm</title>
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
+        integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+</head>
+
+<body>
+
+<div class="container">
+  <h1 class="display-3">CloudNative Workshop</h1>
+
+  <div class="row">
+    <div class="col-6">
+      <h2 class="display-6">WildFly Swarm</h2>
+      <p class="lead">
+        This showcases an implementation of a silly but fun
+        application built using the microservices design pattern.
+        There are three services involved, in addition to the front
+        end which you are currently viewing.
+      </p>
+    </div>
+    
+
+  </div>
+
+  <div class="row" style="margin-top:20px">
+
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Insult service</h2>
+          <p class="card-text">
+            Tap or click the button below to be insulted. Provide
+            your name to make it personal.
+          <form id="form-submit"><input type="text" id="name"/></form>
+          </p>
+          <button id="invoke" class="btn btn-outline-primary">Insult Me!</button>
+          <button id="clear" class="btn btn-outline-success">I Didn't Mean It</button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Your Personal Insults</h2>
+          <ul id="insults"></ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+          crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"
+          integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+          crossorigin="anonymous"></script>
+
+  <script>
+    $(document).ready(function() {
+
+      function getOrPostInsult (e) {
+        console.log($('#name').val())
+        if ($('#name').val() === '') getInsult();
+        else postInsult($('#name').val());
+        e.preventDefault();
+      }
+
+      function getInsult () {
+        $.getJSON('/api/insult', updateInsultList);
+      }
+
+      function postInsult (name) {
+        $.ajax({
+          type: 'POST',
+          url: '/api/nameinsult',
+          data: JSON.stringify({
+            name
+          }),
+          dataType: 'json',
+          contentType: "application/json; charset=utf-8",
+          success: updateInsultList
+        });
+      }
+
+      function updateInsultList (insult) {
+        $('#insults').prepend($('<li>')//.addClass('list-group-item')
+          .text(`${insult.name ? insult.name + ', t' : 'T'}hou ${insult.adj1}, ${insult.adj2} ${insult.noun}!`));
+      }
+
+      function clearInsultList (e) {
+        $('#insults').html('');
+        $('#name').val('');
+        e.preventDefault();
+      }
+
+      // UI event handlers
+      $('#clear').click(clearInsultList);
+      $('#invoke').click(getOrPostInsult);
+      $('#form-submit').submit(getOrPostInsult);
+    });
+  </script>
+</div>
+</body>
+
+</html>
+
+```
+
+** Deploy the service to Openshift
+
+right click on the project(wildflyswar-insult) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-insult' and hit 'Run'
+
+* Note: if this is first time you are deploying wildflyswarm-noun service, please select maven -> click on new launch configuration -> enter below details
+  
+  	Base Directory: ${workspace_loc:/wildflyswarm-noun}
+	Goals: clean fabric8:deploy -Popenshift
+  
+  
+![](./images/25.WildflySwarm.png)
+
+
+![](./images/12.WildflySwarm.png)
+
+
+Successful build message should appear as follows
+
+![](./images/13.WildflySwarm.png)
+
+Access the deployed adjective service by going to OpenShift Console and look for a Route URL 
+
+![](./images/14.WildflySwarm.png)
+
+[http://wildflyswarm-adj-wildflyswarmapps.{**yourip**}/]
+
+You should see the following webpage(index.html) when you access above URL. 
+
+Click on Invoke to see the response from the Adjective Rest service
+
+
+![](./images/16.WildflySwarm.png)
+
+
 
 
 
