--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1538,34 +1538,34 @@ public class InsultService {
 
 right click on the project(wildflyswar-insult) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-insult' and hit 'Run'
 
-* Note: if this is first time you are deploying wildflyswarm-noun service, please select maven -> click on new launch configuration -> enter below details
+* Note: if this is first time you are deploying wildflyswarm-insult service, please select maven -> click on new launch configuration -> enter below details
   
-  	Base Directory: ${workspace_loc:/wildflyswarm-noun}
+  	Base Directory: ${workspace_loc:/wildflyswarm-insult}
 	Goals: clean fabric8:deploy -Popenshift
   
   
-![](./images/25.WildflySwarm.png)
+![](./images/38.WildflySwarm.png)
 
 
-![](./images/12.WildflySwarm.png)
+
 
 
 Successful build message should appear as follows
 
-![](./images/13.WildflySwarm.png)
+![](./images/39.WildflySwarm.png)
 
 Access the deployed adjective service by going to OpenShift Console and look for a Route URL 
 
-![](./images/14.WildflySwarm.png)
+![](./images/40.WildflySwarm.png)
 
-[http://wildflyswarm-adj-wildflyswarmapps.{**yourip**}/]
+[http://wildflyswarm-insult-wildflyswarmapps.{**yourip**}/]
 
 You should see the following webpage(index.html) when you access above URL. 
 
 Click on Invoke to see the response from the Adjective Rest service
 
 
-![](./images/16.WildflySwarm.png)
+![](./images/41.WildflySwarm.png)
 
 
 
