--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1540,8 +1540,8 @@ right click on the project(wildflyswar-insult) -> 'Run As' ->Run Configuration -
 
 * Note: if this is first time you are deploying wildflyswarm-insult service, please select maven -> click on new launch configuration -> enter below details
   
-  	Base Directory: ${workspace_loc:/wildflyswarm-insult}
-	Goals: clean fabric8:deploy -Popenshift
+  	* Base Directory: ${workspace_loc:/wildflyswarm-insult}
+	* Goals: clean fabric8:deploy -Popenshift
   
   
 ![](./images/38.WildflySwarm.png)
@@ -1554,7 +1554,7 @@ Successful build message should appear as follows
 
 ![](./images/39.WildflySwarm.png)
 
-Access the deployed adjective service by going to OpenShift Console and look for a Route URL 
+Access the deployed Insult service by going to OpenShift Console and look for a Route URL 
 
 ![](./images/40.WildflySwarm.png)
 
@@ -1562,7 +1562,7 @@ Access the deployed adjective service by going to OpenShift Console and look for
 
 You should see the following webpage(index.html) when you access above URL. 
 
-Click on Invoke to see the response from the Adjective Rest service
+Click on Invoke to see the response from the Insult Rest service
 
 
 ![](./images/41.WildflySwarm.png)
