--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1065,6 +1065,17 @@ Note the location of your unzipped file.
 <artifactId>cdi</artifactId>
 </dependency>
 ```
+* Add RestEasy client in pom.xml
+```
+   <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-client</artifactId>
+      <version>3.0.19.Final</version>
+      <scope>provided</scope>
+    </dependency>
+
+```
+
 
 
 * Create Insult Model Class (File->New->Class)
