--- a/4.RHOAR-SpringBoot.md
+++ b/4.RHOAR-SpringBoot.md
@@ -16,7 +16,7 @@ In this lab we will create 3 rest services based on SpringBoot
 
 Must have completed labs 1-3. We will be using those components for following labs
 
-### Despcription
+### Description
 The idea of this lab is to generate to random noun and an adjective to generate an insult. It is based on the following idea:  
 http://www.literarygenius.info/a1-shakespearean-insults-generator.htm  
 
@@ -38,7 +38,7 @@ minishift console --url
 ```
 This will give you the url for the console on your local OpenShift instance.  
 
-Go the the roarpad project and the route link should be listed there:  
+Go the the rhoarpad project and the route link should be listed there:  
 
 ![](./images/4.LaunchPadURL.png)  
 
@@ -49,9 +49,9 @@ oc get routes -n rhoarpad
 ```	
 
 #### LaunchPad Steps  
-Step 1:  Click on ‘Launch Your Project ‘  
-Step 2: Select Deployment Type i.e ‘I will build and run locally’  
-Step 3: Select "Rest API Level 0" and hit ‘Continue’  
+Step 1: Click on ‘Launch Your Project ‘  
+Step 2: Select Deployment Type ‘I will build and run locally’  
+Step 3: Select 'Rest API Level 0' and hit ‘Continue’  
 
 ![](./images/4.LaunchPadRest0.png)
 
