--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1058,26 +1058,22 @@ Note the location of your unzipped file.
 * Choose the following menu options to import the project
 `File` ->`Import`-> `Maven` ->`Existing Maven Projects` , `Browse` to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the `Downloads` folder!!)
 
-* Add following dependency in pom.xml
-```
-<dependency>
-<groupId>org.wildfly.swarm</groupId>
-<artifactId>cdi</artifactId>
-</dependency>
-```
-* Add RestEasy client in pom.xml
-```
-   <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-client</artifactId>
-      <version>3.0.19.Final</version>
-      <scope>provided</scope>
-    </dependency>
 
+* Add following dependencies in pom.xml
 ```
-
-
-
+	<dependency>
+		<groupId>org.wildfly.swarm</groupId>
+		<artifactId>cdi</artifactId>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.jboss.resteasy</groupId>
+	 	<artifactId>resteasy-client</artifactId>
+	  	<version>3.0.19.Final</version>
+	   	<scope>provided</scope>
+	</dependency>
+	
+	```
 * Create Insult Model Class (File->New->Class)
 
  Package: io.openshift.booster.insult.model
@@ -1580,7 +1576,187 @@ Click on Invoke to see the response from the Insult Rest service
 
 
 
+*** Deployment Testing
 
+Arquillian is a revolutionary testing platform for Java and the JVM that enables developers to easily write and execute integration and functional tests for Java middleware, ranging from Java EE and beyond.
+
+Using Arquillian, you write a basic test case and annotate it with declarative behavior that says, "`@RunWith` Arquillian". This declaration tells Arquillian to take over execution of the test when it’s launched.
+
+The following example aims at demonstrating a black box approach to testing your deployment that neither mutates the containers (by deploying, reconfiguring etc) nor the Kubernetes/OpenShift resources.
+
+The focus of the example is on immutable infrastructure and integration testing, wherein the test cases are meant to, consume and test the provided services and assert that the environment is in the expected state, providing you with the confidence that your application will work correctly when deployed on an OpenShift cluster.
+
+
+
+* Edit src/test/java/io/openshift/booster/OpenShiftIT.java with following code
+
+```
+
+/*
+ *
+ *  Copyright 2016-2017 Red Hat, Inc, and individual contributors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *  http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ */
+
+package io.openshift.booster;
+
+
+
+
+
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.IOException;
+import java.net.URL;
+
+import org.arquillian.cube.kubernetes.annotations.Named;
+import org.arquillian.cube.openshift.impl.enricher.AwaitRoute;
+import org.arquillian.cube.openshift.impl.enricher.RouteURL;
+import org.jboss.arquillian.junit.Arquillian;
+import org.jboss.arquillian.test.api.ArquillianResource;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+
+import io.fabric8.kubernetes.api.model.v2_6.Service;
+import io.fabric8.openshift.api.model.v2_6.DeploymentConfig;
+import okhttp3.OkHttpClient;
+import okhttp3.Request;
+import okhttp3.Response;
+
+
+/**
+ * @author Heiko Braun
+ */
+@RunWith(Arquillian.class)
+public class OpenshiftIT {
+
+	@Named("wildflyswarm-insult")
+    @ArquillianResource
+    Service insult;
+
+    
+
+    @Named("wildflyswarm-insult")
+    @ArquillianResource
+    DeploymentConfig insultDC;
+
+  
+
+    @RouteURL("wildflyswarm-insult")
+    @AwaitRoute
+    URL url;
+
+   
+
+    @Test
+    public void verify_insult_service_should_not_be_null() throws IOException {
+        assertThat(insult).isNotNull();
+        assertThat(insult.getSpec()).isNotNull();
+        assertThat(insult.getSpec().getPorts()).isNotNull();
+        assertThat(insult.getSpec().getPorts()).isNotEmpty();
+    }
+
+    
+    @Test
+    public void verify_insult_deployment_config_should_not_be_null() throws IOException {
+        assertThat(insultDC).isNotNull();
+        assertThat(insultDC.getStatus().getAvailableReplicas()).isEqualTo(1);
+    }
+
+    @Test
+    public void verify_route_is_configured_and_insult_service_is_accessible() throws IOException {
+        assertThat(url).isNotNull();
+        OkHttpClient okHttpClient = new OkHttpClient();
+        Request request = new Request.Builder().get().url(url).build();
+        Response response = okHttpClient.newCall(request).execute();
+
+        assertThat(response).isNotNull();
+        assertThat(response.code()).isEqualTo(200);
+        
+    }
+}
+
+
+```
+
+* Add following dependencies to pom.xml
+
+<dependency>
+      <groupId>org.arquillian.cube</groupId>
+      <artifactId>arquillian-cube-requirement</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Fabric8 Client Dependencies-->
+    <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>openshift-client</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+     <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.8.0</version>
+      <scope>test</scope>
+    </dependency>
+	
+	
+	
+    
+    
+    
+    
+
+```
+
+
+* Add below dependency under <dependencyManagement> section in pom.xml
+```	
+	<dependency>
+        <groupId>org.arquillian.cube</groupId>
+        <artifactId>arquillian-cube-bom</artifactId>
+        <version>1.9.2</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+   ```   
+
+
+
+** Deploy the service to Openshift
+
+right click on the project(wildflyswar-insult) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-insult' and hit 'Run'
+
+* Note: if this is first time you are deploying wildflyswarm-insult service, please select maven -> click on new launch configuration -> enter below details
+  
+  	* Base Directory: ${workspace_loc:/wildflyswarm-insult}
+	* Goals: clean fabric8:deploy -Popenshift -Popenshift-it
+  
+  
+![](./images/42.WildflySwarm.png)
+
+
+
+
+
+Successful build message should appear as follows
+
+![](./images/43.WildflySwarm.png)
+
+
+Please go through the maven build console logs, you would notice that tests for OpenShiftIT run successful with 0 failures.
 
 
 
