--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1038,6 +1038,7 @@ You should see the following webpage(index.html) when you access above URL.
 
 ![](./images/30.WildflySwarm.png)	
 
+
  * hit 'Download as Zip file', Download should begin on your system
  * Unzip the project
 
@@ -1078,7 +1079,7 @@ Note the location of your unzipped file.
  Package: io.openshift.booster.insult.model
  Class Name: Insult
  
-![](./images/32.WildflySwarm.png)
+![](./images/33.WildFlySwarm.jpeg)	
 
 * Copy below details of the class
 
@@ -1146,7 +1147,7 @@ public class Insult {
 	
 
 
-![](./images/33.WildflySwarm.png)
+![](./images/33.WildFlySwarm.jpeg)
 
 * Copy the following code into Name class
 
