--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -1079,7 +1079,7 @@ Note the location of your unzipped file.
  Package: io.openshift.booster.insult.model
  Class Name: Insult
  
-![](./images/33.WildFlySwarm.png)	
+![](./images/33.WildflySwarm.png)	
 
 * Copy below details of the class
 
@@ -1147,7 +1147,7 @@ public class Insult {
 	
 
 
-![](./images/33.WildFlySwarm.png)
+![](./images/33.WildflySwarm.png)
 
 * Copy the following code into Name class
 
