--- a/5.RHOAR-WildflySwarm-Lab.md
+++ b/5.RHOAR-WildflySwarm-Lab.md
@@ -1923,8 +1923,177 @@ mechanism that notifies you when the Circuit Breaker trips.
 
 In this example we are going to use hystrix circuilt breaker. As our insult service is calling Noun and Adjective service, we will be using Hystrix Command object to call Noun service along with the fall back mechanism
 
+* Add following dependency
+
+
+<dependency>
+    <groupId>com.netflix.hystrix</groupId>
+    <artifactId>hystrix-core</artifactId>
+    <version>1.5.12</version>
+</dependency>
+
 
 * Create NounCommand
+
+Package: io.openshift.booster.noun.service
+Namae: NounCommand
+
+![](./images/50.WildflySwarm.png)
+
+
+```
+package io.openshift.booster.noun.service;
+
+import java.net.URI;
+import java.net.URISyntaxException;
+
+import org.jboss.resteasy.client.jaxrs.ResteasyClient;
+import org.jboss.resteasy.client.jaxrs.ResteasyClientBuilder;
+import org.jboss.resteasy.client.jaxrs.ResteasyWebTarget;
+
+import com.netflix.hystrix.HystrixCommand;
+import com.netflix.hystrix.HystrixCommandGroupKey;
+import com.netflix.hystrix.HystrixCommandProperties;
+
+import io.openshift.booster.noun.model.Noun;
+
+public class NounCommand extends HystrixCommand<Noun> {
+    private URI serviceURI;
+
+    public NounCommand(URI serviceURI) {
+        super(Setter
+                      .withGroupKey(HystrixCommandGroupKey.Factory.asKey("NounGroup"))
+                      .andCommandPropertiesDefaults(
+                              HystrixCommandProperties.Setter()
+                                      .withCircuitBreakerRequestVolumeThreshold(10)
+                                      .withCircuitBreakerSleepWindowInMilliseconds(10000)
+                                      .withCircuitBreakerErrorThresholdPercentage(50)
+                      )
+        );
+
+        this.serviceURI = serviceURI;
+    }
+    
+    public NounCommand(String serviceURI) {
+        super(Setter
+                      .withGroupKey(HystrixCommandGroupKey.Factory.asKey("NounGroup"))
+                      .andCommandPropertiesDefaults(
+                              HystrixCommandProperties.Setter()
+                                      .withCircuitBreakerRequestVolumeThreshold(10)
+                                      .withCircuitBreakerSleepWindowInMilliseconds(10000)
+                                      .withCircuitBreakerErrorThresholdPercentage(50)
+                      )
+        );
+
+        try {
+			this.serviceURI = new URI(serviceURI);
+		} catch (URISyntaxException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+    }
+
+    @Override
+    protected Noun run() throws Exception {
+        ResteasyClient client = new ResteasyClientBuilder().build();
+        ResteasyWebTarget target = client.target(serviceURI);
+
+        NounService nounService = target.proxy(NounService.class);
+        return nounService.getNoun();
+    }
+
+    @Override
+    protected Noun getFallback() {
+        return new Noun().noun("Fallback Noun!");
+    }
+}
+
+
+```
+Please review above code. We have overide run to call our NounService and fallback method would be invoked when Noun service is down.
+
+
+* edit InsultService.java 
+
+Replace the return statement(i.e last line ) in the method insultByName(Name name) to following.
+
+```
+return new Insult()
+                .noun(new NounCommand(rtarget.getUri()).execute().getNoun())
+                .adj1(adjService.getAdjective().getAdjective())
+                .adj2(adjService.getAdjective().getAdjective())
+                .name(name != null ? name.getName() : null);
+```
+
+In the above code, we have updated our code to call NounCommand than directly calling NounService 
+
+
+
+
+** Deploy the service to Openshift
+
+right click on the project(wildflyswar-insult) -> 'Run As' ->Run Configuration ->Select maven profile 'wildflyswarm-insult' and hit 'Run'
+
+* Note: if this is first time you are deploying wildflyswarm-insult service, please select maven -> click on new launch configuration -> enter below details
+  
+  	* Base Directory: ${workspace_loc:/wildflyswarm-insult}
+	* Goals: clean fabric8:deploy -Popenshift
+  
+![](./images/45.WildflySwarm.png)
+
+
+Successful build message should appear as follows
+
+![](./images/46.WildflySwarm.png)
+
+* Deploy Hystrix ui on to OpenShift so that we can see when circuit is open/close
+
+Open terminal
+
+```
+$ oc create -f http://repo1.maven.org/maven2/io/fabric8/kubeflix/hystrix-dashboard/1.0.28/hystrix-dashboard-1.0.28-openshift.yml
+$ oc expose service hystrix-dashboard --port=8080
+
+``
+* Go to OpenShift console and check if hystrix ui is running
+
+
+
+
+
+* Go to OpenShift console and check if insult service pod is running. 
+
+
+
+![](./images/49.WildflySwarm.png)
+
+
+* Now, Scale down noun service pod from the openshift console to 0( if you click on the down arrow on the container, it would scaled down to 0) which means NounService is down
+
+![](./images/51.WildflySwarm.png)
+
+
+* Go to the Insult Service route URL and hit 'Insult Me' button, it should show a fall back message along with adjective
+
+
+![](./images/52.WildflySwarm.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
