--- a/6.VertxGatewayService.md
+++ b/6.VertxGatewayService.md
@@ -66,7 +66,7 @@ Open the url in the browser.
 
 We will import the project template you just created into the IDE and deploy it on OpenShift.
 
-**Note - Please ensure you are logged into OpenShift in the `springbootapps` project.**  
+> NOTE - Please ensure you are logged into OpenShift in the `springbootapps` project.
 
 1. Create a new project called `springbootapps`.
 ```
