added more images to cache

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -78,14 +78,17 @@ Now run check the images list again. This time it should display a bunch of imag
 ```
 $ minishift images list
 docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/hystrix-dashboard:1.0.28
 docker.io/fabric8/launcher-backend:latest
 docker.io/fabric8/launcher-frontend:latest
 registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
 registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
 registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
 registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-sti-builder:v3.9.14
 registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
 registry.access.redhat.com/openshift3/ose:v3.9.14
+registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.2
 registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
 ```
 
@@ -94,14 +97,17 @@ The next command will set the Minishift VM to use the cache for images instead o
 ```
 $ minishift image cache-config add \
  docker.io/fabric8/configmapcontroller:2.3.7 \
+ docker.io/fabric8/hystrix-dashboard:1.0.28 \
  docker.io/fabric8/launcher-backend:latest \
  docker.io/fabric8/launcher-frontend:latest \
  registry.access.redhat.com/openshift3/ose-deployer:v3.9.14 \
  registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14 \
  registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14 \
  registry.access.redhat.com/openshift3/ose-pod:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-sti-builder:v3.9.14 \
  registry.access.redhat.com/openshift3/ose-web-console:v3.9.14 \
  registry.access.redhat.com/openshift3/ose:v3.9.14 \
+ registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.2 \
  registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
 ```
 
@@ -110,14 +116,17 @@ Verify that the cache-config is updated
 ```
 $ minishift image cache-config view
 docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/hystrix-dashboard:1.0.28
 docker.io/fabric8/launcher-backend:latest
 docker.io/fabric8/launcher-frontend:latest
 registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
 registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
 registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
 registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-sti-builder:v3.9.14
 registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
 registry.access.redhat.com/openshift3/ose:v3.9.14
+registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.2
 registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
 ```
 
